Closed
Bug 610582
Opened 15 years ago
Closed 15 years ago
TMFLAGS=tracer is broken
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla2.0b8
People
(Reporter: bzbarsky, Assigned: bzbarsky)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
1.90 KB,
patch
|
gal
:
review+
sayrer
:
approval2.0+
|
Details | Diff | Splinter Review |
BUILD: Current tip TM
STEPS TO REPRODUCE:
1) Build debug shell
2) Stick https://bugzilla.mozilla.org/attachment.cgi?id=489101 in ~/test.js
2) env TMFLAGS=tracer js -j ~/test.js
EXPECTED RESULTS: Some information on side exits
ACTUAL RESULTS:
Assertion failure: str, at /Users/bzbarsky/mozilla/tracemonkey/mozilla/js/src/jsval.h:603
| Assignee | ||
Comment 1•15 years ago
|
||
And in particular, js::TraceRecorder::record_EnterFrame does this:
js_AtomToPrintableString(cx, cx->fp()->fun()->atom)
but cx->fp()->fun()->atom is null, so we propagate the null all the way through js_ValueToPrintableString to js::StringValue to js::Value::setString to STRING_TO_JSVAL_IMPL where we assert.
| Assignee | ||
Comment 2•15 years ago
|
||
This particular function looks like this, I think:
rotateLeft: function(n, s) {
var t4 = ( n << s ) | (n >>> (32 - s));
return t4;
},
| Assignee | ||
Comment 3•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
Assignee: general → bzbarsky
Priority: -- → P1
Whiteboard: [need review]
| Assignee | ||
Updated•15 years ago
|
Attachment #489111 -
Flags: review?(dvander)
Updated•15 years ago
|
Attachment #489111 -
Flags: review?(dvander) → review+
Updated•15 years ago
|
Whiteboard: [need review]
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [need approval]
| Assignee | ||
Updated•15 years ago
|
Attachment #489111 -
Flags: approval2.0?
| Assignee | ||
Comment 4•15 years ago
|
||
Whiteboard: [need approval] → fixed-in-tracemonkey
Comment 5•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Attachment #489111 -
Flags: approval2.0? → approval2.0+
| Assignee | ||
Updated•15 years ago
|
Target Milestone: --- → mozilla2.0b8
You need to log in
before you can comment on or make changes to this bug.
Description
•