Bug 610582.  Fix TMFLAGS=tracer for anonymous functions.  r=gal